Bug 854099 - Make nsPresShell::ScrollToShowRect take fixed position margins into account. r=roc

When fixed position margins are set, it indicates that chrome obscures the
viewport. Inflate the target rect by these margins when calling
ScrollToShowRect on the root scrollable frame.